Introducing logging of requests, events, and errors

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ export REDIS_PASSWORD=password
 export SENDGRID_API_KEY=
 export DEFAULT_FROM_EMAIL=info@opendp.org
 export ACCOUNT_EMAIL_VERIFICATION=none
+
+export AZURE_INSTRUMENTATION_KEY=
