--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "camelcase-keys": "^7.0.0",
     "d3": "^7.3.0",
     "decimal.js": "^10.3.1",
+    "ramda": "^0.28.0",
     "snake-case": "^3.0.4",
     "snakecase-keys": "^4.0.2",
     "v-tooltip": "^2.1.3",
