Setting logging from .env

--- a/.env
+++ b/.env
@@ -7,4 +7,5 @@ export SENDGRID_API_KEY=
 export DEFAULT_FROM_EMAIL=info@opendp.org
 export ACCOUNT_EMAIL_VERIFICATION=none
 
+export AZURE_LOGGING=
 export AZURE_INSTRUMENTATION_KEY=
