#571 updates to several statements re: formatting. e.g. missing `%s`

--- a/.env
+++ b/.env
@@ -7,5 +7,7 @@ export SENDGRID_API_KEY=
 export DEFAULT_FROM_EMAIL=info@opendp.org
 export ACCOUNT_EMAIL_VERIFICATION=none
 
-export AZURE_LOGGING=
+export AZURE_LOGGING=False
 export AZURE_INSTRUMENTATION_KEY=
+
+export VUE_APP_ADOBE_PDF_CLIENT_ID=
