--- a/deploy/k8s_maker/templates/azure_k8s_09_app.yaml
+++ b/deploy/k8s_maker/templates/azure_k8s_09_app.yaml
@@ -29,7 +29,7 @@ data:
   DEFAULT_FROM_EMAIL: "info@opendp.org"
   #
   SECURE_SSL_REDIRECT: "{{ SECURE_SSL_REDIRECT }}"
-  SECURE_PROXY_SSL_HEADER: "{{ SECURE_PROXY_SSL_HEADER }}"
+  USE_SSL_PROXY: "{{ USE_SSL_PROXY }}"
   #
   VUE_APP_GOOGLE_CLIENT_ID: "{{ VUE_APP_GOOGLE_CLIENT_ID }}"
   VUE_APP_ADOBE_PDF_CLIENT_ID: "{{ VUE_APP_ADOBE_PDF_CLIENT_ID }}"
