--- a/.gitignore
+++ b/.gitignore
@@ -184,6 +184,7 @@ server/scripts_dev/dv_test_creds.py
 !dev_notes/api_example_analysis_plan.json
 .env
 !deploy/dataverse/*.json
+!deploy/dataverse/scripts/dataset_specs/*
 !deploy/images/*
 client/.idea/*.*
 latex_service/images/SomeVariable3_histogram.png
