remove simplejson import and catch general exception #631

--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,4 @@ client/.idea/aws.xml
 !deploy/dataverse/*.json
 server/templates/base-vue.html
 !server/opendp_apps/dp_reports/test_data/*.json
+.python-version
