updated to delete dataverses #631

--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,4 @@ server/templates/base-vue.html
 !server/opendp_apps/dp_reports/test_data/*.json
 .python-version
 deploy/dataverse/scripts/bad_delete.html
+deploy/dataverse/scripts/failed_delete_resp.html
