Scripts to delete/add datasets (#632)
* initial script for #631

- add dataset exceptions, summary list of deletions, and command line entry for server_url and dataverse id to start with

* instructions added #631

* Add script for #631

* add test files #632

* Update .gitignore

* #631 Update publish dataset to pause 2 seconds before publishing and to make 3 attempts

* update from 3 to 5 publish attempts #631

* add print stmt

* updated #631

* remove simplejson import and catch general exception #631

* update to delete command to remove locks #631

* Update base.txt

* (some troubleshooting #631, comment added to issue)

* updated to delete dataverses #631

* update Cypress fixtures to match newly uploaded Dataverse files

Co-authored-by: Ellen Kraffmiller <ekraffmiller@hmdc.harvard.edu>

--- a/.gitignore
+++ b/.gitignore
@@ -184,6 +184,7 @@ server/scripts_dev/dv_test_creds.py
 !dev_notes/api_example_analysis_plan.json
 .env
 !deploy/dataverse/*.json
+!deploy/dataverse/scripts/dataset_specs/*
 !deploy/images/*
 client/.idea/*.*
 latex_service/images/SomeVariable3_histogram.png
@@ -201,3 +202,6 @@ client/.idea/aws.xml
 !deploy/dataverse/*.json
 server/templates/base-vue.html
 !server/opendp_apps/dp_reports/test_data/*.json
+.python-version
+deploy/dataverse/scripts/bad_delete.html
+deploy/dataverse/scripts/failed_delete_resp.html
