--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,5 @@ server/templates/base-vue.html
 .python-version
 deploy/dataverse/scripts/bad_delete.html
 deploy/dataverse/scripts/failed_delete_resp.html
+!server/opendp_apps/cypress_utils/management/commands/demo_files/teacher_survey.csv
+!server/opendp_apps/cypress_utils/management/commands/demo_files/*.json
