--- a/deploy/k8s_maker/rendered/dev.dpcreator.org_08_2022_0719.yaml
+++ b/deploy/k8s_maker/rendered/dev.dpcreator.org_08_2022_0719.yaml
@@ -1,4 +1,95 @@
 ---
+# reference: https://github.com/kubernetes-operators-book/chapters/blob/master/ch05/database.yaml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: dpcreator-db-data-configmap-dev
+data:
+  #
+  # Database settings for postgres and Django
+  #
+  #
+  # DB_HOST Should be the same as the service name at the end of this file:
+  DB_HOST: "dpcreator-postgres-service-dev"
+  DB_PORT: "5432"
+  DB_ENGINE: "django.db.backends.postgresql_psycopg2"
+  #
+  # These two variables should have the same value (kludge):
+  POSTGRES_DB: "db_dpcreator"
+  DB_NAME: "db_dpcreator"
+---
+# ---------------------------
+# DPCreator - Postgres Deployment
+# ---------------------------
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: dpcreator-database-dev
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: dpcreator-dev
+      tier: postgres
+  template:
+    metadata:
+      labels:
+        app: dpcreator-dev
+        tier: postgres
+    spec:
+      volumes:
+        # Persistent Disk space to store Postgres files
+        #  Used by dpcreator-postgres container
+        #- name: postgres-persistent-volume
+        #  azureDisk:
+        #    kind: Managed
+        #    diskName: dpcreator-postgres-02
+        #    diskURI: /subscriptions/14d2f886-16d9-4a5b-87f0-7aa1c4608026/resourceGroups/MC_DPCreatorResourceGroup_DPCreatorCluster01_eastus/providers/Microsoft.Compute/disks/dpcreator-postgres-02
+      containers:
+        - name: dpcreator-postgres-dev
+          image: postgres:13
+          imagePullPolicy: Always
+          ports:
+            - name: postgres-port
+              containerPort: 5432
+              protocol: TCP
+          # Persistent Disk space to store Postgres files
+          #volumeMounts:
+          #- name: postgres-persistent-volume
+          #  mountPath: /var/lib/postgresql/data
+          envFrom:
+          - configMapRef:
+              name: dpcreator-db-data-configmap-dev
+          env:
+            - name: POSTGRES_USER
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-auth-secret
+                  key: db_username
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-auth-secret
+                  key: db_password
+---
+# ---------------------------
+# DPCreator - Postgres Service
+# ---------------------------
+apiVersion: v1
+kind: Service
+metadata:
+  name: dpcreator-postgres-service-dev
+  labels:
+    app: dpcreator-dev
+    tier: postgres
+spec:
+  clusterIP: None
+  ports:
+    - port: 5432
+  selector:
+    app: dpcreator-dev
+    tier: postgres
+---
 # ----------------------------------------
 # Configmap used for:
 #  dpcreator-app, dpcreator-celery
@@ -6,7 +97,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: dpcreator-app-configmap-{{ deploy_name }}
+  name: dpcreator-app-configmap-dev
 data:
   #
   STATIC_ROOT: "/dpcreator_volume/static/dist"
@@ -24,35 +115,35 @@ data:
   FILE_UPLOAD_MAX_MEMORY_SIZE: "2621440"
   #
   # Require email verification for account creation
-  ACCOUNT_EMAIL_VERIFICATION: "{{ ACCOUNT_EMAIL_VERIFICATION }}"
+  ACCOUNT_EMAIL_VERIFICATION: "mandatory"
   #
   DEFAULT_FROM_EMAIL: "info@opendp.org"
   #
   #
-  VUE_APP_GOOGLE_CLIENT_ID: "{{ VUE_APP_GOOGLE_CLIENT_ID }}"
-  VUE_APP_ADOBE_PDF_CLIENT_ID: "{{ VUE_APP_ADOBE_PDF_CLIENT_ID }}"
-  VUE_APP_WEBSOCKET_PREFIX: "{{ VUE_APP_WEBSOCKET_PREFIX }}"
+  VUE_APP_GOOGLE_CLIENT_ID: "750757442540-4bg3aulcrm802i8pguo851lq8kikf5ge.apps.googleusercontent.com"
+  VUE_APP_ADOBE_PDF_CLIENT_ID: "34a0c926740d4ddb9758dbc6da2a4f39"
+  VUE_APP_WEBSOCKET_PREFIX: "wss://"
   #
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dpcreator-app-{{ deploy_name }}
+  name: dpcreator-app-dev
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: dpcreator-{{ deploy_name }}
+      app: dpcreator-dev
       tier: app
   template:
     metadata:
       labels:
-        app: dpcreator-{{ deploy_name }}
+        app: dpcreator-dev
         tier: app
     spec:
       #restartPolicy: Always
       volumes:
-        - name: dpcreator-volume-{{ deploy_name }}
+        - name: dpcreator-volume-dev
           emptyDir: {}
           # azureDisk:
           #  kind: Managed
@@ -63,7 +154,7 @@ spec:
         # (1) Nginx frontend: Separate requests to static files vs. Django app
         # -------------------------------------------------
         - name: dpcreator-nginx
-          image: {{ dpcreator_nginx_container }}:{{ dpcreator_container_tag }}
+          image: ghcr.io/opendp/dpcreator/nginx:2022-0719-dev
           imagePullPolicy: Always
           ports:
             - containerPort: 80
@@ -73,7 +164,7 @@ spec:
             # ----------------------------------
             # shared between containers
             # ----------------------------------
-            - name: dpcreator-volume-{{ deploy_name }}
+            - name: dpcreator-volume-dev
               mountPath: /dpcreator_volume
               #subPath: 2ravens_org-apricot
               #readOnly: true
@@ -92,9 +183,9 @@ spec:
         # (3) Core application: Django + bundled static files
         # -------------------------------------------------
         - name: dpcreator-app
-          image: {{ dpcreator_app_container }}:{{ dpcreator_container_tag }}
+          image: ghcr.io/opendp/dpcreator/app:2022-0719-dev
           imagePullPolicy: Always
-          command: [ "{{ dpcreator_startup_script_filename }}" ]
+          command: [ "azure_dev.dpcreator.org.sh" ]
           #command: [ "/bin/sh" ]
           # args: [ "-c", "./migrate.sh && python manage.py runserver 0.0.0.0:8000"]
           ports:
@@ -105,15 +196,15 @@ spec:
             # ----------------------------------
             # shared between containers
             # ----------------------------------
-            - name: dpcreator-volume-{{ deploy_name }}
+            - name: dpcreator-volume-dev
               mountPath: /dpcreator_volume
               #subPath: 2ravens_org-apricot
               #readOnly: false
           envFrom:
           - configMapRef:
-              name: dpcreator-db-data-configmap-{{ deploy_name }}
+              name: dpcreator-db-data-configmap-dev
           - configMapRef:
-              name: dpcreator-app-configmap-{{ deploy_name }}
+              name: dpcreator-app-configmap-dev
           env:
             # Same storage roots on dpcreator-app and celery-worker
             #
@@ -125,7 +216,7 @@ spec:
             - name: DJANGO_SETTINGS_MODULE
               value: opendp_project.settings.azure_test_01
             - name: ALLOWED_HOSTS
-              value: "{{ ALLOWED_HOSTS }}"
+              value: "40.85.170.176,dev.dpcreator.org,127.0.0.1,0.0.0.0"
             - name: DB_USER
               valueFrom:
                 secretKeyRef:
@@ -170,7 +261,7 @@ spec:
         # (4) Celery Queue - same image/settings as except for "command"
         # -------------------------------------------------
         - name: celery-worker
-          image: {{ dpcreator_app_container }}:{{ dpcreator_container_tag }}
+          image: ghcr.io/opendp/dpcreator/app:2022-0719-dev
           imagePullPolicy: Always
           command: ['celery', '-A', 'opendp_project', 'worker', '-l', 'info', '-n', 'worker_dpcreator']
           ports:
@@ -181,15 +272,15 @@ spec:
             # ----------------------------------
             # shared between containers
             # ----------------------------------
-            - name: dpcreator-volume-{{ deploy_name }}
+            - name: dpcreator-volume-dev
               mountPath: /dpcreator_volume
               #subPath: 2ravens_org-apricot
               #readOnly: false
           envFrom:
           - configMapRef:
-              name: dpcreator-db-data-configmap-{{ deploy_name }}
+              name: dpcreator-db-data-configmap-dev
           - configMapRef:
-              name: dpcreator-app-configmap-{{ deploy_name }}
+              name: dpcreator-app-configmap-dev
           env:
             # Same storage roots on dpcreator-app and celery-worker
             #
@@ -201,7 +292,7 @@ spec:
               value: opendp_project.settings.azure_test_01
             # ----------------------------------------------------
             - name: ALLOWED_HOSTS
-              value: "{{ ALLOWED_HOSTS }}"
+              value: "40.85.170.176,dev.dpcreator.org,127.0.0.1,0.0.0.0"
             - name: DB_USER
               valueFrom:
                 secretKeyRef:
@@ -234,16 +325,16 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: dpcreator-load-balancer-{{ deploy_name }}
+  name: dpcreator-load-balancer-dev
   labels:
-    app: dpcreator-{{ deploy_name }}
+    app: dpcreator-dev
     tier: load-balancer
 spec:
   type: LoadBalancer
   # IP mapped to dpcreator.2ravens.org
-  loadBalancerIP: {{ loadBalancerIP }}
+  loadBalancerIP: 40.85.170.176
   selector:
-    app: dpcreator-{{ deploy_name }}
+    app: dpcreator-dev
     tier: app
   ports:
   - port: 80
