Determining file type and uploading .stat and .dta files

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -27,3 +27,9 @@ WORKDIR /code/server
 COPY scripts_startup/azure_dev.dpcreator.org.sh /usr/bin/azure_dev.dpcreator.org.sh
 COPY scripts_startup/azure_demo.dpcreator.org.sh /usr/bin/azure_demo.dpcreator.org.sh
 RUN chmod u+x /usr/bin/*.sh
+
+# -------------------------------------
+# Install libmagic
+# to determine file types
+# -------------------------------------
+RUN apt-get install libmagic1
