--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,4 @@ deploy/dataverse/scripts/bad_delete.html
 deploy/dataverse/scripts/failed_delete_resp.html
 !server/opendp_apps/cypress_utils/management/commands/demo_files/teacher_survey.csv
 !server/opendp_apps/cypress_utils/management/commands/demo_files/*.json
+server/temp.csv
