fix "get_pseudo_categories_list" #686

--- a/.gitignore
+++ b/.gitignore
@@ -202,6 +202,7 @@ client/.idea/aws.xml
 !deploy/dataverse/*.json
 server/templates/base-vue.html
 !server/opendp_apps/dp_reports/test_data/*.json
+!server/opendp_apps/analysis/test_data/*.json
 .python-version
 deploy/dataverse/scripts/bad_delete.html
 deploy/dataverse/scripts/failed_delete_resp.html
