update API token for fixtures and validation test

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
-VUE_APP_GOOGLE_CLIENT=
+VUE_APP_GOOGLE_CLIENT=725082195083-1srivl3ra9mpc1q5ogi7aur17vkjuabg.apps.googleusercontent.com
