726 histogram options display (#727)
* update tests and fixtures for histogram options validation

* add assertion before clicking delete button

* updated Cypress tests for histograms

* fix Add Statistic Dialog display logic for histograms

* break up create-statistics-spec into multiple files

* remove buttons from data table when time has expired (UI fix for issue #719)

* migrated Cypress to latest version

* update Cypress Dockerfile with latest image

* use new Cypress ci config file

* add defineConfig to cypress_github_ci.config.js

* add record option to Cypress run

* add assertion to Delete Dataset test

* change data-test property for delete button

* add a Cypress wait() for api/profile call before testing for Variables itn table

* check for numeric type in minMax logic

* add assertions for password input and profile success message

* clear selectedStatistic when closing dialog

* add test for Variable list and Create Statistics enabled

Co-authored-by: Raman Prasad <raman_prasad@harvard.edu>

--- a/client/cypress/Dockerfile
+++ b/client/cypress/Dockerfile
@@ -1,5 +1,5 @@
 ## Start with Cypress base image
-FROM cypress/included:9.7.0
+FROM cypress/included:12.3.0
 
 
 # docker-compose-wait: Set env variable to wait 60 seconds for the server to be ready
@@ -14,4 +14,4 @@ RUN chmod +x /wait
 
 ## Launch the wait tool and then Cypress
 ## (The server to wait for is set as an environment variable)
-CMD /wait && cypress run --config-file cypress_github_ci.json
+CMD /wait && cypress run --config-file cypress_github_ci.config.js  --record --key 0a9658f9-4279-488b-8f65-29a6ca0c2d76
