--- a/client/cypress/Dockerfile
+++ b/client/cypress/Dockerfile
@@ -11,6 +11,7 @@ ENV WAIT_TIMEOUT=60
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
 RUN chmod +x /wait
 
+ENV GITHUB_RUN_ID=$RANDOM
 
 ## Launch the wait tool and then Cypress
 ## (The server to wait for is set as an environment variable)
