--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -4,6 +4,9 @@ on: [ push ]
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+    matrix:
+      job: [ 0, 1, 2, 3, 4 ]
     steps:
       - uses: actions/checkout@v2
       - name: Build the client static files
