set env in yml file

--- a/docker-compose-ci-step2.yml
+++ b/docker-compose-ci-step2.yml
@@ -80,6 +80,7 @@ services:
     volumes:
       - ./client:/e2e
     environment:
+      PARALLEL_RUN_ID: test1234
       WAIT_HOSTS: server:8000
   #latex:
   #  build: "./latex_service"
