--- a/client/package.json
+++ b/client/package.json
@@ -17,30 +17,31 @@
     "snake-case": "^3.0.4",
     "snakecase-keys": "^4.0.2",
     "v-tooltip": "^2.1.3",
-    "vue": "^2.6.12",
+    "vue": "3.3.4",
+    "@vue/compat": "^3.3.4",
     "vue-google-signin-button": "^1.0.4",
-    "vue-i18n": "^8.22.3",
-    "vue-json-viewer": "^2.2.19",
-    "vue-router": "^3.5.1",
+    "vue-i18n": "9.2.2",
+    "vue-json-viewer": "3.0.4",
+    "vue-router": "4.2.2",
     "vue-waypoint": "^3.5.2",
-    "vuetify": "^2.6.10",
-    "vuex": "^3.6.2",
+    "vuetify": "3.3.5",
+    "vuex": "4.1.0",
     "vuex-multi-tab-state": "^1.0.17",
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-router": "~4.5.12",
-    "@vue/cli-plugin-unit-jest": "^5.0.8",
+    "@vue/cli-plugin-router": "5.0.8",
+    "@vue/cli-plugin-unit-jest": "5.0.8",
     "@vue/cli-service": "^5.0.8",
-    "@vue/test-utils": "1.1.4",
+    "@vue/test-utils": "2.4.0",
     "cypress": "^12.3.0",
     "cypress-terminal-report": "^3.2.2",
     "papaparse": "^5.3.0",
     "sass": "^1.32.11",
     "sass-loader": "^10.0.0",
-    "vue-cli-plugin-i18n": "~2.1.0",
-    "vue-cli-plugin-vuetify": "^2.3.1",
-    "vue-template-compiler": "^2.6.12",
-    "vuetify-loader": "^1.7.2"
+    "vue-cli-plugin-i18n": "2.3.2",
+    "vue-cli-plugin-vuetify": "2.5.8",
+    "@vue/compiler-sfc": "^3.3.4"
+
   }
 }
