--- a/.gitignore
+++ b/.gitignore
@@ -181,6 +181,7 @@ server/scripts_dev/dv_test_creds.py
 !server/opendp_apps/content_pages/fixtures/*.json
 !server/test_data/pdfs/*.pdf
 !server/test_data/deposit/*.json
+!/server/opendp_apps/dataset/fixtures/*.json
 server/test_data/deposit/*.json
 !server/test_data/*.tab
 !dev_notes/api_example_analysis_plan.json
