--- a/.gitignore
+++ b/.gitignore
@@ -178,6 +178,7 @@ server/scripts_dev/dv_test_creds.py
 !server/opendp_apps/banner_messages/fixtures/*.json
 !server/opendp_apps/dataverses/fixtures/*.json
 !server/opendp_apps/profiler/fixtures/*.json
+!server/opendp_apps/profiler/testing/test_files/*
 !server/opendp_apps/content_pages/fixtures/*.json
 !server/test_data/pdfs/*.pdf
 !server/test_data/deposit/*.json
