--- a/client/package.json
+++ b/client/package.json
@@ -29,11 +29,12 @@
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^9.0.0",
     "@vue/cli-plugin-router": "~4.5.12",
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "@vue/test-utils": "1.1.4",
-    "cypress": "^12.3.0",
+    "cypress": "^12.17.1",
     "cypress-terminal-report": "^3.2.2",
     "papaparse": "^5.3.0",
     "sass": "^1.32.11",
