--- a/deploy/k8s_maker/rendered/demo.dpcreator.org_08_2023_0821.yaml
+++ b/deploy/k8s_maker/rendered/demo.dpcreator.org_08_2023_0821.yaml
@@ -217,6 +217,8 @@ spec:
               value: opendp_project.settings.azure_test_01
             - name: ALLOWED_HOSTS
               value: "13.82.125.69,demo.dpcreator.org,127.0.0.1,0.0.0.0"
+            - name: TRUSTED_ORIGINS
+              value: "13.82.125.69,demo.dpcreator.org,127.0.0.1,0.0.0.0"
             - name: DB_USER
               valueFrom:
                 secretKeyRef:
@@ -292,6 +294,8 @@ spec:
               value: opendp_project.settings.azure_test_01
             # ----------------------------------------------------
             - name: ALLOWED_HOSTS
+              value: "13.82.125.69,demo.dpcreator.org,127.0.0.1,0.0.0.0"
+            - name: TRUSTED_ORIGINS
               value: "13.82.125.69,demo.dpcreator.org,127.0.0.1,0.0.0.0"
             - name: DB_USER
               valueFrom:
