--- a/deploy/k8s_maker/rendered/demo.dpcreator.org_08_2023_0821.yaml
+++ b/deploy/k8s_maker/rendered/demo.dpcreator.org_08_2023_0821.yaml
@@ -1,4 +1,95 @@
 ---
+# reference: https://github.com/kubernetes-operators-book/chapters/blob/master/ch05/database.yaml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: dpcreator-db-data-configmap-demo
+data:
+  #
+  # Database settings for postgres and Django
+  #
+  #
+  # DB_HOST Should be the same as the service name at the end of this file:
+  DB_HOST: "dpcreator-postgres-service-demo"
+  DB_PORT: "5432"
+  DB_ENGINE: "django.db.backends.postgresql_psycopg2"
+  #
+  # These two variables should have the same value (kludge):
+  POSTGRES_DB: "db_dpcreator"
+  DB_NAME: "db_dpcreator"
+---
+# ---------------------------
+# DPCreator - Postgres Deployment
+# ---------------------------
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: dpcreator-database-demo
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: dpcreator-demo
+      tier: postgres
+  template:
+    metadata:
+      labels:
+        app: dpcreator-demo
+        tier: postgres
+    spec:
+      volumes:
+        # Persistent Disk space to store Postgres files
+        #  Used by dpcreator-postgres container
+        #- name: postgres-persistent-volume
+        #  azureDisk:
+        #    kind: Managed
+        #    diskName: dpcreator-postgres-02
+        #    diskURI: /subscriptions/14d2f886-16d9-4a5b-87f0-7aa1c4608026/resourceGroups/MC_DPCreatorResourceGroup_DPCreatorCluster01_eastus/providers/Microsoft.Compute/disks/dpcreator-postgres-02
+      containers:
+        - name: dpcreator-postgres-demo
+          image: postgres:13
+          imagePullPolicy: Always
+          ports:
+            - name: postgres-port
+              containerPort: 5432
+              protocol: TCP
+          # Persistent Disk space to store Postgres files
+          #volumeMounts:
+          #- name: postgres-persistent-volume
+          #  mountPath: /var/lib/postgresql/data
+          envFrom:
+          - configMapRef:
+              name: dpcreator-db-data-configmap-demo
+          env:
+            - name: POSTGRES_USER
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-auth-secret
+                  key: db_username
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-auth-secret
+                  key: db_password
+---
+# ---------------------------
+# DPCreator - Postgres Service
+# ---------------------------
+apiVersion: v1
+kind: Service
+metadata:
+  name: dpcreator-postgres-service-demo
+  labels:
+    app: dpcreator-demo
+    tier: postgres
+spec:
+  clusterIP: None
+  ports:
+    - port: 5432
+  selector:
+    app: dpcreator-demo
+    tier: postgres
+---
 # ----------------------------------------
 # Configmap used for:
 #  dpcreator-app, dpcreator-celery
@@ -6,7 +97,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: dpcreator-app-configmap-{{ deploy_name }}
+  name: dpcreator-app-configmap-demo
 data:
   #
   STATIC_ROOT: "/dpcreator_volume/static/dist"
@@ -24,35 +115,35 @@ data:
   FILE_UPLOAD_MAX_MEMORY_SIZE: "2621440"
   #
   # Require email verification for account creation
-  ACCOUNT_EMAIL_VERIFICATION: "{{ ACCOUNT_EMAIL_VERIFICATION }}"
+  ACCOUNT_EMAIL_VERIFICATION: "mandatory"
   #
   DEFAULT_FROM_EMAIL: "info@opendp.org"
   #
   #
-  VUE_APP_GOOGLE_CLIENT_ID: "{{ VUE_APP_GOOGLE_CLIENT_ID }}"
-  VUE_APP_ADOBE_PDF_CLIENT_ID: "{{ VUE_APP_ADOBE_PDF_CLIENT_ID }}"
-  VUE_APP_WEBSOCKET_PREFIX: "{{ VUE_APP_WEBSOCKET_PREFIX }}"
+  VUE_APP_GOOGLE_CLIENT_ID: "750757442540-4bg3aulcrm802i8pguo851lq8kikf5ge.apps.googleusercontent.com"
+  VUE_APP_ADOBE_PDF_CLIENT_ID: "44937032e26b4033a840626ed0cd8e79"
+  VUE_APP_WEBSOCKET_PREFIX: "wss://"
   #
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dpcreator-app-{{ deploy_name }}
+  name: dpcreator-app-demo
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: dpcreator-{{ deploy_name }}
+      app: dpcreator-demo
       tier: app
   template:
     metadata:
       labels:
-        app: dpcreator-{{ deploy_name }}
+        app: dpcreator-demo
         tier: app
     spec:
       #restartPolicy: Always
       volumes:
-        - name: dpcreator-volume-{{ deploy_name }}
+        - name: dpcreator-volume-demo
           emptyDir: {}
           # azureDisk:
           #  kind: Managed
@@ -63,7 +154,7 @@ spec:
         # (1) Nginx frontend: Separate requests to static files vs. Django app
         # -------------------------------------------------
         - name: dpcreator-nginx
-          image: {{ dpcreator_nginx_container }}:{{ dpcreator_container_tag }}
+          image: ghcr.io/opendp/dpcreator/nginx:2023-0821
           imagePullPolicy: Always
           ports:
             - containerPort: 80
@@ -73,7 +164,7 @@ spec:
             # ----------------------------------
             # shared between containers
             # ----------------------------------
-            - name: dpcreator-volume-{{ deploy_name }}
+            - name: dpcreator-volume-demo
               mountPath: /dpcreator_volume
               #subPath: 2ravens_org-apricot
               #readOnly: true
@@ -92,9 +183,9 @@ spec:
         # (3) Core application: Django + bundled static files
         # -------------------------------------------------
         - name: dpcreator-app
-          image: {{ dpcreator_app_container }}:{{ dpcreator_container_tag }}
+          image: ghcr.io/opendp/dpcreator/app:2023-0821
           imagePullPolicy: Always
-          command: [ "{{ dpcreator_startup_script_filename }}" ]
+          command: [ "azure_demo.dpcreator.org.sh" ]
           #command: [ "/bin/sh" ]
           # args: [ "-c", "./migrate.sh && python manage.py runserver 0.0.0.0:8000"]
           ports:
@@ -105,15 +196,15 @@ spec:
             # ----------------------------------
             # shared between containers
             # ----------------------------------
-            - name: dpcreator-volume-{{ deploy_name }}
+            - name: dpcreator-volume-demo
               mountPath: /dpcreator_volume
               #subPath: 2ravens_org-apricot
               #readOnly: false
           envFrom:
           - configMapRef:
-              name: dpcreator-db-data-configmap-{{ deploy_name }}
+              name: dpcreator-db-data-configmap-demo
           - configMapRef:
-              name: dpcreator-app-configmap-{{ deploy_name }}
+              name: dpcreator-app-configmap-demo
           env:
             # Same storage roots on dpcreator-app and celery-worker
             #
@@ -125,9 +216,9 @@ spec:
             - name: DJANGO_SETTINGS_MODULE
               value: opendp_project.settings.azure_test_01
             - name: ALLOWED_HOSTS
-              value: "{{ ALLOWED_HOSTS }}"
+              value: "demo.dpcreator.org"
             - name: TRUSTED_ORIGINS
-              value: "{{ TRUSTED_ORIGINS }}"
+              value: "https://demo.dpcreator.org"
             - name: DB_USER
               valueFrom:
                 secretKeyRef:
@@ -172,7 +263,7 @@ spec:
         # (4) Celery Queue - same image/settings as except for "command"
         # -------------------------------------------------
         - name: celery-worker
-          image: {{ dpcreator_app_container }}:{{ dpcreator_container_tag }}
+          image: ghcr.io/opendp/dpcreator/app:2023-0821
           imagePullPolicy: Always
           command: ['celery', '-A', 'opendp_project', 'worker', '-l', 'info', '-n', 'worker_dpcreator']
           ports:
@@ -183,15 +274,15 @@ spec:
             # ----------------------------------
             # shared between containers
             # ----------------------------------
-            - name: dpcreator-volume-{{ deploy_name }}
+            - name: dpcreator-volume-demo
               mountPath: /dpcreator_volume
               #subPath: 2ravens_org-apricot
               #readOnly: false
           envFrom:
           - configMapRef:
-              name: dpcreator-db-data-configmap-{{ deploy_name }}
+              name: dpcreator-db-data-configmap-demo
           - configMapRef:
-              name: dpcreator-app-configmap-{{ deploy_name }}
+              name: dpcreator-app-configmap-demo
           env:
             # Same storage roots on dpcreator-app and celery-worker
             #
@@ -203,9 +294,9 @@ spec:
               value: opendp_project.settings.azure_test_01
             # ----------------------------------------------------
             - name: ALLOWED_HOSTS
-              value: "{{ ALLOWED_HOSTS }}"
+              value: "demo.dpcreator.org"
             - name: TRUSTED_ORIGINS
-              value: "{{ TRUSTED_ORIGINS }}"
+              value: "https://demo.dpcreator.org"
             - name: DB_USER
               valueFrom:
                 secretKeyRef:
@@ -238,16 +329,16 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: dpcreator-load-balancer-{{ deploy_name }}
+  name: dpcreator-load-balancer-demo
   labels:
-    app: dpcreator-{{ deploy_name }}
+    app: dpcreator-demo
     tier: load-balancer
 spec:
   type: LoadBalancer
   # IP mapped to dpcreator.2ravens.org
-  loadBalancerIP: {{ loadBalancerIP }}
+  loadBalancerIP: 13.82.125.69
   selector:
-    app: dpcreator-{{ deploy_name }}
+    app: dpcreator-demo
     tier: app
   ports:
   - port: 80
