--- a/client/package.json
+++ b/client/package.json
@@ -9,38 +9,38 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
-    "axios": "^0.21.2",
-    "camelcase-keys": "^7.0.0",
-    "d3": "^7.3.0",
-    "decimal.js": "^10.3.1",
-    "ramda": "^0.28.0",
-    "snake-case": "^3.0.4",
-    "snakecase-keys": "^4.0.2",
-    "v-tooltip": "^2.1.3",
-    "vue": "^2.6.12",
-    "vue-google-signin-button": "^1.0.4",
-    "vue-i18n": "^8.22.3",
-    "vue-json-viewer": "^2.2.19",
-    "vue-router": "^3.5.1",
-    "vue-waypoint": "^3.5.2",
-    "vuetify": "^2.6.10",
-    "vuex": "^3.6.2",
-    "vuex-multi-tab-state": "^1.0.17",
-    "vuex-persistedstate": "^4.1.0"
+    "axios": "0.21.2",
+    "camelcase-keys": "7.0.0",
+    "d3": "7.3.0",
+    "decimal.js": "10.3.1",
+    "ramda": "0.28.0",
+    "snake-case": "3.0.4",
+    "snakecase-keys": "4.0.2",
+    "v-tooltip": "2.1.3",
+    "vue": "2.6.12",
+    "vue-google-signin-button": "1.0.4",
+    "vue-i18n": "8.22.3",
+    "vue-json-viewer": "2.2.19",
+    "vue-router": "3.5.1",
+    "vue-waypoint": "3.5.2",
+    "vuetify": "2.6.10",
+    "vuex": "3.6.2",
+    "vuex-multi-tab-state": "1.0.17",
+    "vuex-persistedstate": "4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.5.12",
-    "@vue/cli-plugin-unit-jest": "^5.0.8",
-    "@vue/cli-service": "^5.0.8",
+    "@vue/cli-plugin-unit-jest": "5.0.8",
+    "@vue/cli-service": "5.0.8",
     "@vue/test-utils": "1.1.4",
-    "cypress": "^12.17.1",
-    "cypress-terminal-report": "^3.2.2",
-    "papaparse": "^5.3.0",
-    "sass": "^1.32.11",
-    "sass-loader": "^10.0.0",
+    "cypress": "12.17.1",
+    "cypress-terminal-report": "3.2.2",
+    "papaparse": "5.3.0",
+    "sass": "1.32.11",
+    "sass-loader": "10.0.0",
     "vue-cli-plugin-i18n": "~2.1.0",
-    "vue-cli-plugin-vuetify": "^2.3.1",
-    "vue-template-compiler": "^2.6.12",
-    "vuetify-loader": "^1.7.2"
+    "vue-cli-plugin-vuetify": "2.3.1",
+    "vue-template-compiler": "2.6.12",
+    "vuetify-loader": "1.7.2"
   }
 }
